--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
             <div class="picture">
-                <img src="./WhatsApp Image 2025-09-27 at 16.17.02_5a9685f6.jpg" alt="profile picture">
+                <img src="./Image.jpg" alt="profile picture">
                 <h2>Md Areez Uddin</h2>
                 <p>MERN Stack Developer</p>
             </div>
